:memo: sdk doc update
