# packages/swagger/swagger.json
@@ -947,7 +947,7 @@
           }
         },
         "summary": "생활서비스 전문가 포트폴리오 추가",
-        "description": "생활서비스 전문가 포트폴리오 추가\n\n{@link IHSProvider.FailureCode.Authorize 에러 코드}\n\n@summary 생활서비스 전문가 포트폴리오 추가\n\n@tag hs-providers\n\n@param access_token 생활서비스 전문가 권한을 갖는 액세스 토큰\n\n@param body 포트폴리오 정보",
+        "description": "생활서비스 전문가 포트폴리오 추가\n\n{@link IHSPortfolio.FailureCode.Create 에러 코드}\n\n@summary 생활서비스 전문가 포트폴리오 추가\n\n@tag hs-providers\n\n@param access_token 생활서비스 전문가 권한을 갖는 액세스 토큰\n\n@param body 포트폴리오 정보",
         "x-nestia-namespace": "users.biz-users.hs-providers.me.portfolios.create",
         "x-nestia-jsDocTags": [
           {
@@ -1033,7 +1033,7 @@
           }
         },
         "summary": "내 포트폴리오 목록 조회",
-        "description": "내 포트폴리오 목록 검색\n\n{@link IHSProvider.FailureCode.Authorize 에러 코드}\n\n@summary 내 포트폴리오 목록 조회\n\n@tag hs-providers\n\n@param access_token 생활서비스 전문가 권한을 갖는 액세스 토큰\n\n@param query 페이지 정보\n\n@return 포트폴리오 상세 정보 목록",
+        "description": "내 포트폴리오 목록 검색\n\n{@link IHSPortfolio.FailureCode.GetPrivateList 에러 코드}\n\n@summary 내 포트폴리오 목록 조회\n\n@tag hs-providers\n\n@param access_token 생활서비스 전문가 권한을 갖는 액세스 토큰\n\n@param query 페이지 정보\n\n@return 포트폴리오 상세 정보 목록",
         "x-nestia-namespace": "users.biz-users.hs-providers.me.portfolios.getList",
         "x-nestia-jsDocTags": [
           {
@@ -1470,7 +1470,7 @@
           }
         },
         "summary": "생활서비스 전문가 포트폴리오 목록 검색",
-        "description": "생활서비스 전문가 포트폴리오 목록 검색\n\n{@link IHSProvider.FailureCode.GetPublic 에러 코드}\n\n@summary 생활서비스 전문가 포트폴리오 목록 검색\n\n@tag hs-providers\n\n@param provider_id 생활서비스 전문가 id\n\n@param query 페이지 정보\n\n@return 포트폴리오 공개 정보 목록",
+        "description": "생활서비스 전문가 포트폴리오 목록 검색\n\n{@link IHSPortfolio.FailureCode.GetPublicList 에러 코드}\n\n@summary 생활서비스 전문가 포트폴리오 목록 검색\n\n@tag hs-providers\n\n@param provider_id 생활서비스 전문가 id\n\n@param query 페이지 정보\n\n@return 포트폴리오 공개 정보 목록",
         "x-nestia-namespace": "users.biz-users.hs-providers.portfolios.getList",
         "x-nestia-jsDocTags": [
           {
@@ -2891,10 +2891,10 @@
           "phone": {
             "oneOf": [
               {
-                "$ref": "#/components/schemas/__type.Nullable"
+                "$ref": "#/components/schemas/IVerification.IVerifiedPhone.IAccount.Nullable"
               },
               {
-                "$ref": "#/components/schemas/__type.o1.Nullable"
+                "$ref": "#/components/schemas/IVerification.IVerifiedPhone.IVerification.Nullable"
               }
             ],
             "description": "전화번호 인증 정보\n\nnull 입력시 저장하지 않는다.\n\ntype이 verification일 때, 인증을 진행한 전화번호를 입력한다.\n\ntype이 account일 때, 계정에 존재하는 전화번호를 입력한다.",
@@ -2904,10 +2904,10 @@
           "email": {
             "oneOf": [
               {
-                "$ref": "#/components/schemas/__type.o2.Nullable"
+                "$ref": "#/components/schemas/IVerification.IVerifiedEmail.IAccount.Nullable"
               },
               {
-                "$ref": "#/components/schemas/__type.o3.Nullable"
+                "$ref": "#/components/schemas/IVerification.IVerifiedEmail.IVerification.Nullable"
               }
             ],
             "description": "이메일 인증 정보\n\nnull 입력시 저장하지 않는다.\n\ntype이 verification일 때, 인증을 진행한 이메일을 입력한다.\n\ntype이 account일 때, 계정에 존재하는 이메일을 입력한다.",
@@ -3000,7 +3000,7 @@
         "description": "이메일 인증 정보\n\nnull 입력시 저장하지 않는다.\n\ntype이 verification일 때, 인증을 진행한 이메일을 입력한다.\n\ntype이 account일 때, 계정에 존재하는 이메일을 입력한다.",
         "x-typia-jsDocTags": []
       },
-      "__type.Nullable": {
+      "IVerification.IVerifiedPhone.IAccount.Nullable": {
         "type": "object",
         "properties": {
           "type": {
@@ -3027,7 +3027,7 @@
         "description": "계정 정보에 저장된 전화번호와 일치해야 한다.",
         "x-typia-jsDocTags": []
       },
-      "__type.o1.Nullable": {
+      "IVerification.IVerifiedPhone.IVerification.Nullable": {
         "type": "object",
         "properties": {
           "type": {
@@ -3061,7 +3061,7 @@
         "description": "인증 정보 고유 id",
         "x-typia-jsDocTags": []
       },
-      "__type.o2.Nullable": {
+      "IVerification.IVerifiedEmail.IAccount.Nullable": {
         "type": "object",
         "properties": {
           "type": {
@@ -3073,6 +3073,12 @@
               "account"
             ]
           },
+          "phone": {
+            "description": "계정 정보에 저장된 전화번호와 일치해야 한다.",
+            "x-typia-required": true,
+            "x-typia-optional": false,
+            "type": "string"
+          },
           "email": {
             "description": "계정 정보에 저장된 이메일과 일치해야 한다.\n\n@format email",
             "x-typia-metaTags": [
@@ -3101,12 +3107,13 @@
         "nullable": true,
         "required": [
           "type",
+          "phone",
           "email"
         ],
-        "description": "계정 정보에 저장된 이메일과 일치해야 한다.\n\n@format email",
+        "description": "계정 정보에 저장된 전화번호와 일치해야 한다.",
         "x-typia-jsDocTags": []
       },
-      "__type.o3.Nullable": {
+      "IVerification.IVerifiedEmail.IVerification.Nullable": {
         "type": "object",
         "properties": {
           "type": {
@@ -3118,6 +3125,18 @@
               "verification"
             ]
           },
+          "phone": {
+            "description": "인증 정보에 저장된 전화번호와 일치해야 한다.",
+            "x-typia-required": true,
+            "x-typia-optional": false,
+            "type": "string"
+          },
+          "verification_id": {
+            "description": "인증 정보 고유 id",
+            "x-typia-required": true,
+            "x-typia-optional": false,
+            "type": "string"
+          },
           "email": {
             "description": "계정 정보에 저장된 이메일과 일치해야 한다.\n\n@format email",
             "x-typia-metaTags": [
@@ -3141,19 +3160,14 @@
             "x-typia-optional": false,
             "type": "string",
             "format": "email"
-          },
-          "verification_id": {
-            "description": "인증 정보 고유 id",
-            "x-typia-required": true,
-            "x-typia-optional": false,
-            "type": "string"
           }
         },
         "nullable": true,
         "required": [
           "type",
-          "email",
-          "verification_id"
+          "phone",
+          "verification_id",
+          "email"
         ],
         "description": "인증 정보 고유 id",
         "x-typia-jsDocTags": []
@@ -3182,15 +3196,15 @@
             }
           },
           "phone": {
-            "$ref": "#/components/schemas/IVerification.IPhoneVerification"
+            "$ref": "#/components/schemas/IVerification.IVerifiedPhone"
           },
           "email": {
             "oneOf": [
               {
-                "$ref": "#/components/schemas/__type.o2.Nullable"
+                "$ref": "#/components/schemas/IVerification.IVerifiedEmail.IAccount.Nullable"
               },
               {
-                "$ref": "#/components/schemas/__type.o3.Nullable"
+                "$ref": "#/components/schemas/IVerification.IVerifiedEmail.IVerification.Nullable"
               }
             ],
             "description": "이메일 인증 정보\n\nnull 입력시 저장하지 않는다.\n\ntype이 verification일 때, 인증을 진행한 이메일을 입력한다.\n\ntype이 account일 때, 계정에 존재하는 이메일을 입력한다.",
@@ -3272,18 +3286,17 @@
         "description": "사업자 증명 서류 사진 목록",
         "x-typia-jsDocTags": []
       },
-      "IVerification.IPhoneVerification": {
+      "IVerification.IVerifiedPhone": {
         "oneOf": [
           {
-            "$ref": "#/components/schemas/__type"
+            "$ref": "#/components/schemas/IVerification.IVerifiedPhone.IAccount"
           },
           {
-            "$ref": "#/components/schemas/__type.o1"
+            "$ref": "#/components/schemas/IVerification.IVerifiedPhone.IVerification"
           }
-        ],
-        "description": "인증 정보 고유 id"
+        ]
       },
-      "__type": {
+      "IVerification.IVerifiedPhone.IAccount": {
         "type": "object",
         "properties": {
           "type": {
@@ -3310,7 +3323,7 @@
         "description": "계정 정보에 저장된 전화번호와 일치해야 한다.",
         "x-typia-jsDocTags": []
       },
-      "__type.o1": {
+      "IVerification.IVerifiedPhone.IVerification": {
         "type": "object",
         "properties": {
           "type": {
@@ -3581,15 +3594,15 @@
             }
           },
           "phone": {
-            "$ref": "#/components/schemas/IVerification.IPhoneVerification"
+            "$ref": "#/components/schemas/IVerification.IVerifiedPhone"
           },
           "email": {
             "oneOf": [
               {
-                "$ref": "#/components/schemas/__type.o2.Nullable"
+                "$ref": "#/components/schemas/IVerification.IVerifiedEmail.IAccount.Nullable"
               },
               {
-                "$ref": "#/components/schemas/__type.o3.Nullable"
+                "$ref": "#/components/schemas/IVerification.IVerifiedEmail.IVerification.Nullable"
               }
             ],
             "description": "이메일 인증 정보\n\nnull 입력시 저장하지 않는다.\n\ntype이 verification일 때, 인증을 진행한 이메일을 입력한다.\n\ntype이 account일 때, 계정에 존재하는 이메일을 입력한다.",
