# src/api/structures/user/IClient.ts
@@ -72,7 +72,7 @@ export namespace IClient {
          *
          * type이 account일 때, 계정에 존재하는 전화번호를 입력한다.
          */
-        phone: null | IVerification.IPhoneVerification;
+        phone: null | IVerification.IVerifiedPhone;
         /**
          * 이메일 인증 정보
          *
@@ -82,7 +82,7 @@ export namespace IClient {
          *
          * type이 account일 때, 계정에 존재하는 이메일을 입력한다.
          */
-        email: null | IVerification.IEmailVerification;
+        email: null | IVerification.IVerifiedEmail;
     }
     export type IPrivate = IClient;
     export type IProfile = IPrivate;
